# estudos_fastapi

./: README.md  main.py  models.py  pyproject.toml
models/: models.py
routes/: curso_router.py  usuario_router.py
